apps/cluster1/windows/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: novnc
spec:
  selector:
      app.kubernetes.io/part-of: windows
