apps/cluster1/windows/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: novnc
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,192.168.0.0/16"
spec:
  ingressClassName: nginx
  rules:
  - host: novnc.windows.home.wugi.info
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: novnc
            port:
              number: 80
